# metamorph

./: LICENSE  Notes.hs  README.md  metamorph.cabal
src/Test/: Metamorph.hs
src/Test/Metamorph/: Generic.hs  IO.hs  Internal.hs  Pretty.hs
test/: generics.hs  test.hs
